--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -1,33 +1,4 @@
-/*
-* Skeleton V2.0.4
-* Copyright 2014, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 12/29/2014
-*/
 
-
-/* Table of contents
-––––––––––––––––––––––––––––––––––––––––––––––––––
-- Grid
-- Base Styles
-- Typography
-- Links
-- Buttons
-- Forms
-- Lists
-- Code
-- Tables
-- Spacing
-- Utilities
-- Clearing
-- Media Queries
-*/
-
-
-/* Grid
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
   position: relative;
   width: 100%;
@@ -137,18 +108,32 @@ h1, h2, h3, h4, h5, h6 {
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+h4 { font-size: 2.4rem; letter-spacing: -.08rem; }
+h5 { font-size: 1.8rem; letter-spacing: -.05rem; }
+h6 { font-size: 1.5rem; letter-spacing: 0; }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
   h1 { font-size: 5.0rem; }
   h2 { font-size: 4.2rem; }
   h3 { font-size: 3.6rem; }
-  h4 { font-size: 3.0rem; }
-  h5 { font-size: 2.4rem; }
-  h6 { font-size: 1.5rem; }
+  h4 { font-size: 2.0rem; }
+  h5 { font-size: 1.4rem; }
+  h6 { font-size: 0.5rem; }
+}
+
+#library
+{
+  display: flex;
+}
+
+.books
+{
+  box-sizing: border-box;
+  padding: 20px;
+  border: 1px solid lightgray;
+  margin: 2px;
+  border-radius: 10px;
 }
 
 p {
